--- a/web/main.html
+++ b/web/main.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Погода</title>
 
-    <script src="eel.js"></script>
+    <script type="text/javascript" src="/eel.js"></script>
     <link rel="icon" type="image.png" href="/favicon.png">
 
     <link rel="stylesheet" href="main.css">
@@ -16,7 +16,7 @@
     <input id="location" type="text" placeholder="Введитен название страны и города..."required=" "
     value="Нью-Йорк, США">
 
-    <button id="show">Узнать погоду</button>
+    <button id="show" onclick="display_weather()">Узнать погоду</button>
 
     <div id="info">  </div >
 
@@ -24,17 +24,12 @@
     <script type="text/javascript">
 
         async function display_weather() {
-            let_place=document.getElementById('location').value;
+            let place = document.getElementById('location').value;
             // вызываем функция ger_res из Python кода
-            let_res= await eel.get_weather(place)();
+            let res = await eel.get_weather(place)();
             document.getElementById('info').innerHTML=res;
         }
-
-        jQuery('#show')/on('click', function(){
-            //при клике на кнопку отображаем погоду
-            display_weather();
-        })
-        </script>
+    </script>
     
 </body>
 </html>
