--- a/web/main.html
+++ b/web/main.html
@@ -13,7 +13,7 @@
     css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
 </head>
 <body>
-    <input id="location" type="text" placeholder="Введитен название страны и города..."required=" "
+    <input id="location" type="text" placeholder="Введите название страны и города..."required=" "
     value="Нью-Йорк, США">
 
     <button id="show" onclick="display_weather()">Узнать погоду</button>
